# snake-in-c

./: .gitignore  CMakeLists.txt
assets/: snake-body.aseprite
src/: main.c
